added get user from token method