@@ -27,15 +27,15 @@ public class UserService implements UserDetailsService {
     public UserDetails loadUserByUsername(String username) throws UsernameNotFoundException {
 
         List<UserDetailsProjection> result = repository.searchUserAndRolesByEmail(username);
-        if (result.size() == 0) {
+        if (result.isEmpty()) {
             throw new UsernameNotFoundException("Email not found");
         }
 
         User user = new User();
-        user.setEmail(result.get(0).getUsername());
-        user.setPassword(result.get(0).getPassword());
+        user.setEmail(result.getFirst().getUsername());
+        user.setPassword(result.getFirst().getPassword());
         for (UserDetailsProjection projection : result) {
-            user.addRole(new Role(projection.getRoleId(), projection.getAuthority()));
+            user.addRole(new Role(projection));
         }
 
         return user;
